# OlistTraining

./: README.md  instrumento.csv  main.py  poetry.toml  pyproject.toml
Code First/Class /: Composicao.py  Fila.py  Herança.py  Polimorfismo.py  Socket.py
CodeFirst/Class /: Herança.py
CodeFirst/Class Exercise/Coleções/Dicionarios/: dict_carro.py  dict_produtos.py
CodeFirst/Class Exercise/Vetores/: Teste_Calculadora.py  Vetor.py
CodeFirst/Code First/Class /: Classes.py  Composicao.py  Durders.py  Fila.py  Funcao_DIR.py  Herança.py  Ininio_Teste.py  Operadores.py  Polimorfismo.py  Teste_Calculadora.py  Threading.py
CodeFirst/Code First/Class Exercise/: Gatinho.py  Geometria.py
Documentation/: qualidade_de_software.txt  training _python.txt
Note Pad/: Qualidade de Software  Training Python
Training-Pratic/Arquivo_TXT/: lendo_placa_carro.py  placa_carro.py  produto_com_with.py  removendo_arquivo_csv.py  tratamento_excecao.py
Training-Pratic/Tratamento_Excecao/: excecao_com_raise.py  tratamento_excecao.py
Training-Teoric/: Durders.py  Threading_02.py  archive.txt  arquivo_csv.py  arquivo_txt1.py  arquivo_txt2.py  arquivo_txt3.py  arquivo_txt4.py  arquivo_txt5.py  carros.csv  comercio.csv  curso_python.txt  funcao_with_DB.py  introducao_classe1.py  introducao_classes.py  placa_carro.txt  remover_arquivo_txt.py  tratamento_excecao.py
Training-Teoric/Class  Foundation/: Funcao_DIR.py  Ininio_Teste.py  Thread_Determinante_1.py  Thread_Timer.py
Training/Class  Foundation/: Fila.py  Operadores.py  Polimorfismo.py  Thread_Determinante.py
(+8 files in other folders)
