[tool.poetry]
name = "poetry add requests"
version = "0.1.0"
description = "Repository to student Olist Tech Start - Python"
authors = ["wstiehler <william.stiehler@evoluinfo.com.br>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.1"
SQLAlchemy = "^1.4.15"
Django = "^3.2.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
flash = "^1.0.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
